// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client-side 1`] = `
<div>
  <div>
    Hello 
    Kévin
  </div>
</div>
`;

exports[`client-side with serialized props 1`] = `
<div>
  <div>
    Hello 
    Anne
  </div>
</div>
`;

exports[`server-side 1`] = `
<div
  dangerouslySetInnerHTML={
    {
      "__html": "<esi:include onerror="continue" src="/_custom?fragment=id&amp;props=%7B%22esi%22%3A%7B%22attrs%22%3A%7B%22onerror%22%3A%22continue%22%7D%7D%2C%22name%22%3A%22K%C3%A9vin%22%7D&amp;sign=d6fae1bccd077dedd3f0baea9fd24c2700b1879c7b6b04bcc69388e5fcc0b890" />",
    }
  }
/>
`;
